# stranger-api

./: .env.example  .gitignore  Cargo.toml  README.md  test-request.http
app/: Cargo.toml
app/src/: lib.rs  route.rs
app/src/api/: mod.rs  system.rs
app/src/api/case/: args.rs  mod.rs
app/src/websocket/: handler.rs  mod.rs  models.rs  types.rs  ws.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/request/: system.rs  websocket.rs
common/src/response/: login.rs
common/src/utils/: response.rs
common/src/validator/: form.rs  json.rs  mod.rs  path.rs  query.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/entity/: mod.rs  prelude.rs  sys_order.rs  sys_user.rs
database/src/repository/: mod.rs  sys_user_repository.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  system.rs
kernel/src/config/: database_config.rs  error.rs  mod.rs  redis_config.rs  server_config.rs  websocket_config.rs
kernel/src/redis/: mod.rs  model.rs  service.rs
kernel/src/redis_pool/: mod.rs  service.rs  types.rs
kernel/src/tasks/: manager.rs  mod.rs  task_one.rs
middleware-fn/: Cargo.toml
middleware-fn/src/: request.rs
