[package]
name = "common"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
validator = { workspace = true, features = ["derive"] }
mime = { workspace = true }