[package]
name = "database"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
kernel = { path = "../kernel" }

anyhow = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls", "with-chrono"] }
strum = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]