[package]
name = "kernel"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full", "signal", "rt-multi-thread", "macros", "parking_lot", "signal"] }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
num_cpus = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }