[package]
name = "kernel"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full", "signal", "rt-multi-thread", "macros", "parking_lot", "signal"] }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
num_cpus = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "streams", "cluster"] }