[package]
name = "middleware-fn"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
